# LightningBird

./: .gitignore  .gitmodules  CMakeLists.txt
inc/: common.h  index.h  spann.h
src/: index.cpp  main.cpp
